--- a/apps/desktop/resources/info.desktop_proxy.plist
+++ b/apps/desktop/resources/info.desktop_proxy.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 	<dict>
 		<key>CFBundleIdentifier</key>
-		<string>com.bitwarden.desktop</string>
+		<string>fr.principalprod.vaultmanager</string>
 	</dict>
 </plist>
