--- a/apps/desktop/resources/entitlements.desktop_proxy.plist
+++ b/apps/desktop/resources/entitlements.desktop_proxy.plist
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>LTZ2PFU5D6.com.bitwarden.desktop</string>
+		<string>LTZ2PFU5D6.fr.principalprod.vaultmanager</string>
 	</array>
 	<key>com.apple.security.cs.allow-jit</key>
 	<true/>
