--- a/apps/desktop/resources/entitlements.mac.plist
+++ b/apps/desktop/resources/entitlements.mac.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.application-identifier</key>
-	<string>LTZ2PFU5D6.com.bitwarden.desktop</string>
+	<string>LTZ2PFU5D6.fr.principalprod.vaultmanager</string>
 	<key>com.apple.developer.team-identifier</key>
 	<string>LTZ2PFU5D6</string>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
